--- a/EmployeeTS.html
+++ b/EmployeeTS.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-   <script src="hw.js"></script>
+   <script src="EmployeeTS.js"></script>
    <style>
    h1{
    	text-align: center;
@@ -23,8 +23,8 @@
 <body>
 <h1>Employee Payroll</h1>
 <div id="links">
-<a href="hwB.html">Assignment B</a>
-<a href="hwC.html">Assignment C</a>
+<a href="guessingGame.html">Guessing Game</a>
+<a href="matchingGame.html">Matching Game</a>
 
 </div>
 <button id = "bttn" onclick="pay()">Click to Start Payroll</button>
