--- a/guessingGame.html
+++ b/guessingGame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Guessing Game</title>
-	<script type="text/javascript" src="hwB.js"></script>
+	<script type="text/javascript" src="guessingGame.js"></script>
 	<style type="text/css">
 		#top{
 			display: inline-block;
