--- a/matchingGame.html
+++ b/matchingGame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Matching Game</title>
-	<script type="text/javascript" src="hwC.js"></script>
+	<script type="text/javascript" src="matchingGame.js"></script>
 	<style type="text/css">
 	#whole{
 
